examples/cats-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cats
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: cats
      annotations:
        giphy.com/search: "lazy cats"
    spec:
      containers:
        - name: giphy-demo
          image: rossf7/giphy-k8s-demo
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: podinfo
              mountPath: /mnt
              readOnly: false
      volumes:
      - name: podinfo
        downwardAPI:
          items:
            - path: "annotations"
              fieldRef:
                fieldPath: metadata.annotations
