examples/cats-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cats
  name: cats
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: cats
  sessionAffinity: None
  type: ClusterIP
