examples/dogs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dogs
  name: dogs
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: dogs
  sessionAffinity: None
  type: ClusterIP
