examples/tv-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tv
  name: tv
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: tv
  sessionAffinity: None
  type: ClusterIP
